Fix horizontal scrolling for Safari

--- a/docs/_themes/clusterhq/static/docs.css
+++ b/docs/_themes/clusterhq/static/docs.css
@@ -365,7 +365,8 @@ a.download:before {
     }
 
     .highlight pre {
-        float: left;
+        word-wrap: normal;
+        display: inline;
     }
 }
 @media all and (min-width: 992px) {
